DO280/network-policy-allow-specific.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific
spec:
  podSelector:
    matchLabels:
      deployment: ${app1_name}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: ${prj2_name}
        podSelector:
          matchLabels:
            deployment: ${app3_name}
      ports:
      - port: 8080
        protocol: TCP
